--- a/index.html
+++ b/index.html
@@ -9,51 +9,53 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header class="aaa">
-    <img src="./eisenhower-matrix.jpg" alt="Eisenhower matrix. Explain how to make a decision and what is urgent and important">
-    <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+  <header class="header">
+    <img class="header__img" src="./eisenhower-matrix.jpg" alt="Eisenhower matrix. Explain how to make a decision and what is urgent and important">
+    <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </header>
-  <main class="centered-main-page-element">
-    <section id="topSectionForAddingElementToList">
-      <h3><label for="new-task">Add Item</label></h3>
-      <div class="task-row-wrapper">
-        <input id="new-task" class="task" type="text">
-        <button>Add</button>
-      </div>
-    </section>      
-    <section>
-      <h3>Todo</h3>
-      <ul id="incompleteTasks">
-        <li>
-          <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg" alt="remove button">
+  <main class="main">
+    <section class="section">
+      <h3 class="section-title"><label class="add-task__label label" for="new-task">Add Item</label></h3>
+      <ul class="section__list">
+        <li class="section__list-item section__list-item_no-border">
+          <input class="list-item__input-text list-item__input-text_new-task" type="text">
+          <button class="list-item__button list-item__button_new-task">Add</button>
+        </li>
+      </ul>      
+    </section>     
+    <section class="section">
+      <h3 class="section-title">Todo</h3>
+      <ul class="section__list section__list_incompleted-tasks">
+        <li class="section__list-item">
+          <input class="list-item__intup-checkbox" type="checkbox">
+          <label class="list-item__label">Pay Bills</label>
+          <input class="list-item__input-text" type="text">
+          <button class="list-item__button list-item__button_edit">Edit</button>
+          <button class="list-item__button list-item__button_delete">
+            <img  class="list-item__img" src="./remove.svg" alt="remove button">
           </button>
         </li>
-        <li class="editMode">
-          <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
-          <button class="edit">Save</button>
-          <button class="delete">
-            <img src="./remove.svg" alt="remove button">
+        <li class="section__list-item section__list-item_edit-mode">
+          <input class="list-item__intup-checkbox" type="checkbox">
+          <label class="list-item__label">Go Shopping</label>
+          <input class="list-item__input-text" type="text" value="Go Shopping">
+          <button class="list-item__button list-item__button_edit">Save</button>
+          <button class="list-item__button list-item__button_delete">
+            <img class="list-item__img" src="./remove.svg" alt="remove button">
           </button>
         </li>
       </ul>
     </section>  
-    <section>
-      <h3>Completed</h3>
-      <ul id="completed-tasks">
-        <li>
-          <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg" alt="remove button">
+    <section class="section">
+      <h3 class="section-title">Completed</h3>
+      <ul class="section__list section__list_completed-tasks">
+        <li class="section__list-item">
+          <input class="list-item__intup-checkbox" type="checkbox" checked>
+          <label class="list-item__label">See the Doctor</label>
+          <input class="list-item__input-text" type="text">
+          <button class="list-item__button list-item__button_edit">Edit</button>
+          <button class="list-item__button list-item__button_delete">
+            <img class="list-item__img" src="./remove.svg" alt="remove button">
           </button>
         </li>
       </ul>
