fix: add lang attribute to html tag and add id to input.list-item__input-text_new-task - validationw3c

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -20,7 +20,7 @@
       <h3 class="section-title"><label class="add-task__label label" for="new-task">Add Item</label></h3>
       <ul class="section__list">
         <li class="section__list-item section__list-item_no-border">
-          <input class="list-item__input-text list-item__input-text_new-task" type="text">
+          <input class="list-item__input-text list-item__input-text_new-task" type="text" id="new-task">
           <button class="list-item__button list-item__button_new-task">Add</button>
         </li>
       </ul>      
