--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
   <title>Todo App</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;1,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;1,700&display=swap" 
+      rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header class="header">
-    <img class="header__img" src="./eisenhower-matrix.jpg" alt="Eisenhower matrix. Explain how to make a decision and what is urgent and important">
-    <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+    <img class="header__img" src="./eisenhower-matrix.jpg" 
+        alt="Eisenhower matrix. Explain how to make a decision and what is urgent and important">
+    <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">
+        Want more details?</a>
   </header>
   <main class="main">
     <section class="section">
